Trying to prevent contact us from being scrollable on mobile.

--- a/LESS/contact.less
+++ b/LESS/contact.less
@@ -4,7 +4,8 @@
 @import "footer";
 
 html {
-  height: 100vh;
+  height: 90vh;
+  overflow: hidden;
   div {
     .contactMe {
       display: flex;
